Fixed sign-in component visual issues on iphone 5

--- a/src/components/Modal/modal.styles.scss
+++ b/src/components/Modal/modal.styles.scss
@@ -5,4 +5,5 @@
   right: 0;
   bottom: 0;
   background-color: rgba($color: #000000, $alpha: 0.35);
+  z-index: 30;
 }
