--- a/src/components/description-alert/description-alerts.style.scss
+++ b/src/components/description-alert/description-alerts.style.scss
@@ -9,7 +9,8 @@
   justify-content: center;
 
   & .alert {
-    width: 50vw;
+    // width: 50vw;
+    width: 300px;
     margin: auto;
   }
 }
