--- a/src/components/nav/navigation.styles.scss
+++ b/src/components/nav/navigation.styles.scss
@@ -4,13 +4,14 @@
   z-index: 20;
   width: 100%;
   color: #ffffff;
-  height: 12vh;
+  height: 75px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding-inline: 30px;
   background-color: #ffbe0b;
   background-image: linear-gradient(120deg, #fcc221 0%, #f6bc50 100%);
+  box-shadow: 0 0 10px 0 rgb(0 0 0 / 20%);
   letter-spacing: 1px;
   font-family: "Barlow", sans-serif;
   font-family: "PT Sans Narrow", sans-serif;
