--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 
 body {
   margin: 0;
-  padding-top: 12vh;
+  padding-top: 75px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
